--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint:fix": "eslint ./**/{*.js,*.jsx,*.ts,*.tsx} --fix"
   },
   "dependencies": {
+    "gray-matter": "^4.0.2",
     "next": "^10.0.0",
     "normalize.css": "^8.0.1",
     "react": "17.0.1",
